タイトルの変更２

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
-        tagawa ryoto
+        <title>
+            tagawa ryoto
+        </title>
     </head>
     <body>
         
